# demo-deploy-model-fastapi-docker

./: .cruft.json  .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.code_quality/: ruff.toml
src/: model.joblib  model_fastapi_deploy.py
src/model/: train_model_pipeline.py
tests/: test_model_fastapi_deploy.py
